--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,44 @@
-{{outlet}}
+<div class="container">
+  <div class="row">
+    <div class="col s12">
+      <h1>Invoice Tracker</h1>
+
+      <input type="text" name="" value="" placeholder="Filter by date">
+
+      <ul class="collection with-header">
+        <li class="collection-header">
+          <a href="#" class="btn right">Add invoice</a>
+          <span style="font-size: 36px">Invoices</span>
+        </li>
+
+        <li class="collection-item">
+          <p>#0001</p>
+          <p>£432.10</p>
+          <p>
+            <small>12-03-2019</small>
+          </p>
+          <p class="right-align">
+            <a href="#" class="action">Edit</a>
+            <a href="#" class="action">Delete</a>
+          </p>
+        </li>
+
+        <li class="collection-item">
+          <p>#0002</p>
+          <p>£432.10</p>
+          <p>
+            <small>12-03-2019</small>
+          </p>
+        </li>
+
+        <li class="collection-item">
+          <p>#0003</p>
+          <p>£432.10</p>
+          <p>
+            <small>12-03-2019</small>
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
