Remove unused href

--- a/app/templates/components/invoice-list.hbs
+++ b/app/templates/components/invoice-list.hbs
@@ -18,8 +18,8 @@
       </p>
 
       <p class="right-align">
-        <a href="#" {{action "showInvoiceForm" invoice}}>Edit</a> |
-        <a href="#" {{action "deleteInvoice" invoice}}>Delete</a>
+        <a href="" {{action "showInvoiceForm" invoice}}>Edit</a> |
+        <a href="" {{action "deleteInvoice" invoice}}>Delete</a>
       </p>
     </li>
   {{/each}}
