--- a/app/templates/components/invoice-form.hbs
+++ b/app/templates/components/invoice-form.hbs
@@ -8,6 +8,6 @@
 
   <div class="modal-footer">
     <a href="" class="waves-effect waves-green" {{action "saveInvoice"}}>Save</a>
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+    <a href="" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
   </div>
 </div>
